fixed bug #15095: File Upload Panel z-index Issue
git-svn-id: http://svn.ilias.de/svn/ilias/trunk@56875 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/Services/FileUpload/templates/default/fileupload.css
+++ b/Services/FileUpload/templates/default/fileupload.css
@@ -27,6 +27,7 @@ button.submit:disabled:hover {
     height: 100%;
     -webkit-box-shadow: -2px 0 5px rgba(0, 0, 0, .2);
     box-shadow: -2px 0 5px rgba(0, 0, 0, .2);
+	z-index: 2000;
 }
 
 div.ilFileUploadHeader {
